# sdx

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
conda/: dev.yaml
docs/: changelog.md  contributing.md  example.ipynb  index.md  installation.md
research/: __init__.py  cli.py
research/app/: __init__.py  diagnosis.html  main.py
research/app/templates/: base.html  dashboard.html  demographics.html  diagnosis.html  done.html  exams.html  language.html  lifestyle.html  mental.html  patient.html  symptoms.html  tests.html  wearable.html
research/models/: __init__.py  repositories.py
scripts/: gen_ref_nav.py
scripts/gen_models/: formatting.py  gen_base.py  gen_sqla.py  gen_sqlmodel.py
src/sdx/: __init__.py  utils.py
src/sdx/agents/: client.py
src/sdx/agents/diagnostics/: __init__.py  core.py
src/sdx/agents/extraction/: medical_reports.py  wearable.py
src/sdx/agents/treatments/: __init__.py
src/sdx/models/sqla/: fhir.py  fhirx.py
src/sdx/models/sqlmodel/: __init__.py  fhir.py  fhirx.py
src/sdx/privacy/: __init__.py  deidenitfier.py
src/sdx/research/: cli.py
src/sdx/schema/: __init__.py  clinical_outputs.py  fhir.py  human_evaluations.py
tests/: __init__.py  conftest.py  test_deidentifier.py  test_extraction_wearable.py  test_main.py  test_medical_reports.py  test_models_fhir_sqla.py  test_models_fhir_sqlmodel.py  test_research_evaluations.py  test_research_repositories.py  test_utils.py
tests/data/diagnostics/: pancreatitis.md
tests/data/patients/: patients.json
tests/data/reports/pdf_reports/: unsupported_file.txt
tests/data/symptoms/: pancreatitis.md
tests/data/treatments/: pancreatitis.md
tests/data/wearable/: giberish.json  wearable_data.csv  wearable_data.json
